--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ menu:
 widgets: 
 - recent_posts
 - tagcloud 
+- link
 
 excerpt_link: Read More
 
@@ -21,5 +22,5 @@ fancybox: true
 
 google_analytics: UA-50169885-1
 domain: hugofeng.info
-rss: 
+rss: /atom.xml
 
